fix: remove z-index from button

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,7 +1,3 @@
-
-/*================================ 
-    Button
-================================*/
 button {
   background: #3790ff;
   padding: 10px;
@@ -20,7 +16,7 @@ button {
   align-items: center;
   font-size: 24px;
   font-size: 1.5rem;
-  z-index: 5;
+  /*z-index: 5;*/
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.4);
   -webkit-transition: all .2s ease-out;
   transition: all .2s ease-out;
@@ -38,24 +34,6 @@ button {
   transition: all .2s ease-out;
 }
 
-.btn {
-  /*display: inline-block;*/
-  /*background-color: #192d3e;*/
-  /*color: white;*/
-  /*border: 0;*/
-  font-weight: bold;
-  /*padding: 0.5em 1em;*/
-  text-align: center;
-  /*border-radius: 5px;*/
-}
-
-.btn:focus,
-.btn:hover{
-    /*opacity:.8;*/
-  /*text-decoration: none;*/
-  background-color:#005bcc;
-}
-
 /*================================ 
    Styled  Button
 ================================*/
@@ -67,7 +45,7 @@ button {
 button.outline {
   display: inline;
   position: relative;
-  z-index: 3;
+  /*z-index: 3;*/
   background: transparent;
   color: #1172c4;
   font-size: 14px;
